[package]
name = "nds_sound_render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
glob = "0.3.1"
hound = "3.5.0"
# rustysynth = "1.2.0"
rustysynth = { git = "https://github.com/Bill13579/rustysynth" }
